--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Archive Page</li>
+              <li class="breadcrumb-item active" aria-current="page">Recommended places</li>
             </ol>
           </nav>
         </div>
